@@ -1,5 +1,6 @@
 0.1.2
  - ci: overhauled build pipeline
+ - enh: add APIAuthorizationError class
 0.1.1
  - setup: bump dclab from 0.28.0 to 0.32.2 (OOM issues during compression)
  - setup: pin dclab (for triaging)
